# nvim-rust.hatch

./: .hatch.toml  Cargo.toml  Makefile.toml  README.md
src/: lib.rs
